--- a/css/materialize.css
+++ b/css/materialize.css
@@ -3,6 +3,14 @@
  * Copyright 2014-2017 Materialize
  * MIT License (https://raw.githubusercontent.com/Dogfalo/materialize/master/LICENSE)
  */
+
+.block-color {
+  height: 400px;
+  width: auto;
+  background:#009688
+
+}
+
 .materialize-red {
   background-color: #e51c23 !important;
 }
@@ -2820,6 +2828,7 @@ ul.staggered-list li {
 @media only screen and (max-width: 992px) {
   .hide-on-med-and-down {
     display: none !important;
+    color: #000
   }
 }
 
@@ -2880,7 +2889,7 @@ ul.staggered-list li {
 .page-footer {
   padding-top: 20px;
   color: #fff;
-  background-color: #ee6e73;
+  background-color: #eeeeee;
 }
 
 .page-footer .footer-copyright {
@@ -4267,10 +4276,11 @@ nav .button-collapse i {
 
 nav .brand-logo {
   position: absolute;
-  color: #fff;
+  color: #000;
   display: inline-block;
   font-size: 2.1rem;
   padding: 0;
+  margin-left: 25px
 }
 
 nav .brand-logo.center {
@@ -4723,6 +4733,9 @@ small {
   transition: box-shadow .25s, -webkit-box-shadow .25s;
   border-radius: 2px;
 }
+
+
+
 
 .card .card-title {
   font-size: 24px;
